
Misc:
 - the `useFootPrintCollisionVolume` unit def tag now takes precedence over the default sphere
   that appears when `collisionVolumeScales` are zero. This means that units no longer have to
   define a bogus custom colvol just to prevent the default sphere.
 - don't warn for archive checksum mismatch if server's checksum is zero
 - 3D and Cubemap .dds textures supported in Lua

-- 105.0 --------------------------------------------------------
Sim:
 - allow resurrecting indestructable features
 - consider partially reclaimed wrecks nonfresh for area-resurrection commands
 ! remove undocumented BeamLaser range modifier (provided 30% extra when fired by mobile units)
 ! remove legacy (COB, though also affecting Lua) hack allowing units with onlyForward weapons to fire regardless of AimWeapon status
 ! remove CMD_SET_WANTED_MAX_SPEED
 - allow CEG trails for crashing aircraft (engine will randomly select from any generators listed in sfxTypes.crashExplosionGenerators)
 - DGun weapontype: allow leading (leadLimit for DGun defaults to 0 instead of -1 for back-compatibility)
 - Rifle weapontype: obey collision flags
 - change default ownerExpAccWeight to 0 for all weapon-types
 - remove salvoError multiplier hack for positional and out-of-los targets
 - add new UnitDef tag "stopToAttack"
 - defs: accept "health" in addition to "maxdamage" (units) or "damage" (features)

Lua:
 - add math.tau
 - add sensors.decloakRequiresLineOfSight modrule. If true, sight radius works as a cap for decloak radius
   (for example a unit with decloak radius 200 will not be decloaked with a 100 LoS unit in the 100-200 range,
   and units with 0 LoS can't decloak others at all regardless of decloak range). Defaults to false.
 - add Platform.osVersion; complements Platform.osName
 - add Platform.hwConfig
 - Script.IsEngineMinVersion now available in all Lua parsing contexts,
   most importantly in `defs.lua`
 ! change {Allow,Unit}Command callin parameters